--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ class: center, middle, inverse, title-slide
 
 # Comparing models of irrational behaviour against individual variance
 ### Lenard Dome and Andy Wills
-### Mar 30, 2022
+### Apr 04, 2022
 
 ---
 
@@ -70,7 +70,7 @@ class: top left inverse
 
 ## The framework: *global* model behaviour
 
-@roberts2000persuasive
+Robert and Pashler (2000)
 
 1. `prediction` What does the model say will happen?
 2. `heterogeneity` Between-subject variability is not explained by goodness-of-fit.
@@ -94,7 +94,7 @@ class: top left inverse
 
 &lt;br&gt;
 
-* *To model behavior, we need to know how models behave* [@pitt2006global]
+* *To model behavior, we need to know how models behave* (Pitt, Kim, MNavarro, Myung, 2006)
 * MCMC method to define disjointed regions in the parameter space
 * Tells us what unobserved results the model predicts
 
@@ -171,8 +171,9 @@ class: top left inverse
   * participants trained to accuracy
   * participants has low accuracy
   * stimuli are pictures, colours, symptoms, person characteristics
-  * it is impossible to get rid of...
 
+FIXME: Don review
+See this excellent paper for a more thorough review, 
 
 ]
 
@@ -189,7 +190,7 @@ Ordinal patterns are a qualitative description of a relationship between an inde
 
 **Directed Graph**
 
-&lt;img src="./assets/ordinal_directed_graph.png" width="1057" /&gt;
+![](./assets/ordinal_directed_graph.png)&lt;!-- --&gt;
 ]
 
 .pull-right[
@@ -230,7 +231,481 @@ class: top left inverse
 
 ## The findings: results
 
+.pull-left[
+
 &gt; The computer was on a figurative 🔥
+
+]
+
+.pull-right[
+
+<div id="vdryifyvgo" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
+}
+
+#vdryifyvgo .gt_table {
+  display: table;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  background-color: #000000;
+  width: auto;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #A8A8A8;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #A8A8A8;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_heading {
+  background-color: #000000;
+  text-align: center;
+  border-bottom-color: #000000;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_title {
+  color: #FFFFFF;
+  font-size: 125%;
+  font-weight: initial;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom-color: #000000;
+  border-bottom-width: 0;
+}
+
+#vdryifyvgo .gt_subtitle {
+  color: #FFFFFF;
+  font-size: 85%;
+  font-weight: initial;
+  padding-top: 0;
+  padding-bottom: 6px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-color: #000000;
+  border-top-width: 0;
+}
+
+#vdryifyvgo .gt_bottom_border {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_col_headings {
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_col_heading {
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: normal;
+  text-transform: inherit;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: bottom;
+  padding-top: 5px;
+  padding-bottom: 6px;
+  padding-left: 5px;
+  padding-right: 5px;
+  overflow-x: hidden;
+}
+
+#vdryifyvgo .gt_column_spanner_outer {
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: normal;
+  text-transform: inherit;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#vdryifyvgo .gt_column_spanner_outer:first-child {
+  padding-left: 0;
+}
+
+#vdryifyvgo .gt_column_spanner_outer:last-child {
+  padding-right: 0;
+}
+
+#vdryifyvgo .gt_column_spanner {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  vertical-align: bottom;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  overflow-x: hidden;
+  display: inline-block;
+  width: 100%;
+}
+
+#vdryifyvgo .gt_group_heading {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: initial;
+  text-transform: inherit;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: middle;
+}
+
+#vdryifyvgo .gt_empty_group_heading {
+  padding: 0.5px;
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: initial;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  vertical-align: middle;
+}
+
+#vdryifyvgo .gt_from_md > :first-child {
+  margin-top: 0;
+}
+
+#vdryifyvgo .gt_from_md > :last-child {
+  margin-bottom: 0;
+}
+
+#vdryifyvgo .gt_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 10px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: middle;
+  overflow-x: hidden;
+}
+
+#vdryifyvgo .gt_stub {
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: initial;
+  text-transform: inherit;
+  border-right-style: solid;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vdryifyvgo .gt_stub_row_group {
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 100%;
+  font-weight: initial;
+  text-transform: inherit;
+  border-right-style: solid;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+  padding-left: 5px;
+  padding-right: 5px;
+  vertical-align: top;
+}
+
+#vdryifyvgo .gt_row_group_first td {
+  border-top-width: 2px;
+}
+
+#vdryifyvgo .gt_summary_row {
+  color: #FFFFFF;
+  background-color: #000000;
+  text-transform: inherit;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vdryifyvgo .gt_first_summary_row {
+  border-top-style: solid;
+  border-top-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_first_summary_row.thick {
+  border-top-width: 2px;
+}
+
+#vdryifyvgo .gt_last_summary_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_grand_summary_row {
+  color: #FFFFFF;
+  background-color: #000000;
+  text-transform: inherit;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vdryifyvgo .gt_first_grand_summary_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-style: double;
+  border-top-width: 6px;
+  border-top-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_striped {
+  background-color: rgba(128, 128, 128, 0.05);
+}
+
+#vdryifyvgo .gt_table_body {
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_footnotes {
+  color: #FFFFFF;
+  background-color: #000000;
+  border-bottom-style: none;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_footnote {
+  margin: 0px;
+  font-size: 90%;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vdryifyvgo .gt_sourcenotes {
+  color: #FFFFFF;
+  background-color: #000000;
+  border-bottom-style: none;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+}
+
+#vdryifyvgo .gt_sourcenote {
+  font-size: 90%;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vdryifyvgo .gt_left {
+  text-align: left;
+}
+
+#vdryifyvgo .gt_center {
+  text-align: center;
+}
+
+#vdryifyvgo .gt_right {
+  text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+#vdryifyvgo .gt_font_normal {
+  font-weight: normal;
+}
+
+#vdryifyvgo .gt_font_bold {
+  font-weight: bold;
+}
+
+#vdryifyvgo .gt_font_italic {
+  font-style: italic;
+}
+
+#vdryifyvgo .gt_super {
+  font-size: 65%;
+}
+
+#vdryifyvgo .gt_footnote_marks {
+  font-style: italic;
+  font-weight: normal;
+  font-size: 75%;
+  vertical-align: 0.4em;
+}
+
+#vdryifyvgo .gt_asterisk {
+  font-size: 100%;
+  vertical-align: 0;
+}
+
+#vdryifyvgo .gt_slash_mark {
+  font-size: 0.7em;
+  line-height: 0.7em;
+  vertical-align: 0.15em;
+}
+
+#vdryifyvgo .gt_fraction_numerator {
+  font-size: 0.6em;
+  line-height: 0.6em;
+  vertical-align: 0.45em;
+}
+
+#vdryifyvgo .gt_fraction_denominator {
+  font-size: 0.6em;
+  line-height: 0.6em;
+  vertical-align: -0.05em;
+}
+</style>
+<table class="gt_table">
+  
+  <thead class="gt_col_headings">
+    <tr>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1"></th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">distance</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">alpha</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">beta</th>
+    </tr>
+  </thead>
+  <tbody class="gt_table_body">
+    <tr class="gt_group_heading_row">
+      <td colspan="4" class="gt_group_heading">BC</td>
+    </tr>
+    <tr class="gt_row_group_first"><td class="gt_row gt_right gt_stub">EXIT</td>
+<td class="gt_row gt_right">0.4714045</td>
+<td class="gt_row gt_right">1.00000000</td>
+<td class="gt_row gt_right">0.6666667</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">NNCAG</td>
+<td class="gt_row gt_right">0.4343827</td>
+<td class="gt_row gt_right">0.91452991</td>
+<td class="gt_row gt_right">0.5527066</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">DGCM</td>
+<td class="gt_row gt_right">0.4714045</td>
+<td class="gt_row gt_right">1.00000000</td>
+<td class="gt_row gt_right">0.6666667</td></tr>
+    <tr class="gt_group_heading_row">
+      <td colspan="4" class="gt_group_heading">BC, A</td>
+    </tr>
+    <tr class="gt_row_group_first"><td class="gt_row gt_right gt_stub">EXIT</td>
+<td class="gt_row gt_right">0.6730814</td>
+<td class="gt_row gt_right">0.19658120</td>
+<td class="gt_row gt_right">0.4120558</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">NNCAG</td>
+<td class="gt_row gt_right">0.6142296</td>
+<td class="gt_row gt_right">0.17948718</td>
+<td class="gt_row gt_right">0.1920828</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">DGCM</td>
+<td class="gt_row gt_right">0.5272493</td>
+<td class="gt_row gt_right">0.38461538</td>
+<td class="gt_row gt_right">0.4210526</td></tr>
+    <tr class="gt_group_heading_row">
+      <td colspan="4" class="gt_group_heading">BC, B, C</td>
+    </tr>
+    <tr class="gt_row_group_first"><td class="gt_row gt_right gt_stub">EXIT</td>
+<td class="gt_row gt_right">0.6703935</td>
+<td class="gt_row gt_right">0.07692308</td>
+<td class="gt_row gt_right">0.1373019</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">NNCAG</td>
+<td class="gt_row gt_right">0.6527562</td>
+<td class="gt_row gt_right">0.08547009</td>
+<td class="gt_row gt_right">0.0697256</td></tr>
+    <tr><td class="gt_row gt_right gt_stub">DGCM</td>
+<td class="gt_row gt_right">0.5716990</td>
+<td class="gt_row gt_right">0.20000000</td>
+<td class="gt_row gt_right">0.1169591</td></tr>
+  </tbody>
+  
+  
+</table>
+</div>
+
+]
+
 
 ---
 
@@ -270,7 +745,6 @@ class: top left inverse
 
 ---
 
-## References {-}
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
